Fix contact link in subpages

--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -15,7 +15,7 @@
 {{ content }}
 </div>
 <div class="footer">
-	<div class="contact"><a href="contact.html">Contact</a></div>
+	<div class="contact"><a href="/contact.html">Contact</a></div>
 </div>
 
 </div>
