--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 <meta charset="utf-8">
@@ -7,16 +8,14 @@
 </head>
 <body>
 <div class="site">
-<div class="header">
-	<h1 class="title"><a href="/">{{ site.name }}</a></h1>
-</div>
+
+{% include header.html %}
 
 <div class="content">
 {{ content }}
 </div>
-<div class="footer">
-	<div class="contact"><a href="/contact.html">Contact</a></div>
-</div>
+
+{% include footer.html %}
 
 </div>
 </body>
