--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
-<link rel="stylesheet" href="/css/tron.css">
+<link rel="stylesheet" href="/css/mre.css">
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
