--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
+{% feed_meta %}
 <link rel="stylesheet" href="/css/mre.css">
 <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
