use mre.css for mine-gallery layout too

--- a/_layouts/mine-gallery.html
+++ b/_layouts/mine-gallery.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="utf-8">
 <title>{{ page.title }}</title>
-<link rel="stylesheet" href="/css/tron.css">
+<link rel="stylesheet" href="/css/mre.css">
 </head>
 <body>
 <div class="site">
