--- a/css/mre.css
+++ b/css/mre.css
@@ -11,6 +11,12 @@ h1 {
 	padding-right: 1em;
 }
 
+h2 {
+	border: 0.05em solid black;
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
 .title {
 	text-align: center;
 }
