--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,3 @@
-<div class="header">
-	<h1 class="title"><a href="/">{{ site.name }}</a></h1>
-</div>
+<header>
+	<h1><a href="/">{{ site.name }}</a></h1>
+</header>
