--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>{{ page.title }}</title>
-{% feed_meta %}
-<link rel="stylesheet" href="/css/mre.css">
-<link rel="shortcut icon" type="image/png" href="/favicon.png" />
+	<meta charset="utf-8" />
+	<title>{{ page.title }}</title>
+	{% feed_meta %}
+	<link rel="stylesheet" href="/css/mre.css" />
+	<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
-<div class="site">
 
 {% include header.html %}
 
-<div class="content">
-{{ content }}
-</div>
+<main>
+	<article class="content">
+	{{ content }}
+	</article>
+
+</main>
 
 {% include footer.html %}
 
-</div>
 </body>
 </html>
