_layouts/mine.html: load opt-in-script only if page accepts comments
that script is used only for comments so no need to load it otherwise

--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -30,8 +30,9 @@
 
 {% include footer.html %}
 
-
-<script src="/js/opt-in-script.js"></script>
+{% if page.accept_comments %}
+	<script src="/js/opt-in-script.js"></script>
+{% endif %}
 
 </body>
 </html>
