--- a/_layouts/mine-gallery.html
+++ b/_layouts/mine-gallery.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="{{ page.lang }}">
 <head>
-<meta charset="utf-8">
-<title>{{ page.title }}</title>
-<link rel="stylesheet" href="/css/mre.css">
+	<meta charset="utf-8" />
+	<title>{{ page.title }}</title>
+	<link rel="stylesheet" href="/css/mre.css">
 </head>
 <body>
 <div class="site">
