--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="{{ page.lang }}">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<meta charset="utf-8">
-<title>{{ page.title }}</title>
-{% feed_meta %}
-<link rel="stylesheet" href="/css/mre.css">
-<link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <title>{{ page.title }}</title>
+    {% feed_meta %}
+    <link rel="stylesheet" href="/css/mre.css">
+    <link rel="shortcut icon" type="image/png" href="/favicon.png" />
 </head>
 <body>
 <div class="site">
