_includes/footer.html: add ATOM feed link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
 <footer>
-	<div class="contact"><a href="/contact.html">Contact</a></div>
+	<span class="contact"><a href="/contact.html">Contact</a></span> - 
+	<span class="rss"><a href="/feed.xml">ATOM feed</a></span>
 </footer>
