use jekyll-seo-tag
https://rubygems.org/gems/jekyll-seo-tag

--- a/_layouts/mine-gallery.html
+++ b/_layouts/mine-gallery.html
@@ -2,8 +2,9 @@
 <html lang="{{ page.lang }}">
 <head>
 	<meta charset="utf-8" />
-	<title>{{ page.title }}</title>
 	<link rel="stylesheet" href="/css/mre.css">
+
+	{% seo %}
 </head>
 <body>
 <div class="site">
