--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>{{ page.title }}</title>
-	{% feed_meta %}
 	<link rel="stylesheet" href="/css/mre.css" />
 	<link rel="shortcut icon" type="image/png" href="/favicon.png" />
+
+	{% seo %}
 </head>
 <body>
 
