add geekring links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,10 @@
 <footer>
+	<hr/>
 	<span class="contact"><a href="/contact.html">Contact</a></span> - 
 	<span class="rss"><a href="/feed.xml">ATOM feed</a></span>
+	◇
+	This site is a proud member of the <a href="https://geekring.net/">geekring</a>!
+	<a href="https://geekring.net/site/NUMBER/previous">⮜</a>
+	<a href="https://geekring.net/site/NUMBER/random">🎲</a>
+	<a href="https://geekring.net/site/NUMBER/next">⮞</a>
 </footer>
