_includes/footer.html: set geekring number

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
 	<span class="rss"><a href="/feed.xml">ATOM feed</a></span>
 	◇
 	This site is a proud member of the <a href="https://geekring.net/">geekring</a>!
-	<a href="https://geekring.net/site/NUMBER/previous">⮜</a>
-	<a href="https://geekring.net/site/NUMBER/random">🎲</a>
-	<a href="https://geekring.net/site/NUMBER/next">⮞</a>
+	<a href="https://geekring.net/site/316/previous">⮜</a>
+	<a href="https://geekring.net/site/316/random">🎲</a>
+	<a href="https://geekring.net/site/316/next">⮞</a>
 </footer>
