--- a/_layouts/mine-gallery.html
+++ b/_layouts/mine-gallery.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="/css/mre.css">
+	<link rel="stylesheet" href="/css/dxhr.css">
 
 	{% seo %}
 </head>
