--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="/css/mre.css" />
+	<link rel="stylesheet" type="text/css" href="/css/mre.css" />
+	<link rel="stylesheet" type="text/css" title="dark" href="/css/dxhr.css" />
 	<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
 	{% seo %}
