--- a/_layouts/mine-gallery.html
+++ b/_layouts/mine-gallery.html
@@ -2,6 +2,7 @@
 <html lang="{{ page.lang }}">
 <head>
 	<meta charset="utf-8" />
+	<meta name="robots" content="noai, noimageai" />
 	<link rel="stylesheet" href="/css/mre.css">
 	<link rel="stylesheet" href="/css/dxhr.css">
 
