layouts: set light/dark mode in link media attr, not in CSS file

--- a/_layouts/mine-gallery.html
+++ b/_layouts/mine-gallery.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="robots" content="noai, noimageai" />
-	<link rel="stylesheet" href="/css/mre.css">
-	<link rel="stylesheet" href="/css/dxhr.css">
+	<link rel="stylesheet" href="/css/mre.css" media="(prefers-color-scheme: light)" />
+	<link rel="stylesheet" href="/css/dxhr.css" media="(prefers-color-scheme: dark)" />
 
 	{% seo %}
 </head>
