--- a/_layouts/mine.html
+++ b/_layouts/mine.html
@@ -4,8 +4,8 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="robots" content="noai, noimageai" />
-	<link rel="stylesheet" type="text/css" href="/css/mre.css" />
-	<link rel="stylesheet" type="text/css" title="dark" href="/css/dxhr.css" />
+	<link rel="stylesheet" type="text/css" href="/css/mre.css" media="(prefers-color-scheme: light)" />
+	<link rel="stylesheet" type="text/css" title="dark" href="/css/dxhr.css" media="(prefers-color-scheme: dark)" />
 	<link rel="shortcut icon" type="image/png" href="/favicon.png" />
 
 	{% seo %}
